# tag-spider-rs

./: .gitignore  Cargo.toml  README.md  expanded.rs  extracted-treeitem-c6643bf0-label.txt  filetree.txt  flake.nix  rust-toolchain.toml  shell.nix  tokens-treeitem-c6643bf0-label.txt  tree.json
resources/: tags.csv
src/: error.rs  filenode.rs  lexer.rs  lib.rs  main.rs  model.rs  spider.rs  tree.rs  ui.rs
