[package]
name = "tag-spider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-recursion = "1.1.1"
crossterm = "0.28.1"
csv = "1.3.1"
env_logger = "0.11.7"
log = "0.4.27"
once_cell = "1.20.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thirtyfour = "0.35.0"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
